# Cat

./: CMakeLists.txt  README.md  docs.md  done.md  run.bash  syntax.md
header/: ast.h  codegen.h  lexer.h  parser.h  token.h
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
test/: main.cat
